# docs/swagger.yaml
@@ -478,6 +478,15 @@ definitions:
       message:
         type: string
     type: object
+  ? github_com_faridlan_employee-tracker-api_internal_utils.SuccessResponse-array_github_com_faridlan_employee-tracker-api_internal_delivery_http_dto_TargetDetailResponse
+  : properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_faridlan_employee-tracker-api_internal_delivery_http_dto.TargetDetailResponse'
+        type: array
+      message:
+        type: string
+    type: object
   ? github_com_faridlan_employee-tracker-api_internal_utils.SuccessResponse-github_com_faridlan_employee-tracker-api_internal_delivery_http_dto_AchievementResponse
   : properties:
       data:
@@ -782,15 +791,13 @@ paths:
         name: employee_id
         required: true
         type: string
-      - description: Bulan (1-12)
+      - description: Bulan (1-12) - Opsional
         in: query
         name: month
-        required: true
         type: integer
-      - description: 'Tahun (Misal: 2026)'
+      - description: 'Tahun (Misal: 2026) - Opsional'
         in: query
         name: year
-        required: true
         type: integer
       produces:
       - application/json
@@ -1114,6 +1121,22 @@ paths:
       tags:
       - Product
   /api/targets:
+    get:
+      description: Mengambil daftar semua target dari semua karyawan (Untuk Dashboard)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Berhasil mengambil data target
+          schema:
+            $ref: '#/definitions/github_com_faridlan_employee-tracker-api_internal_utils.SuccessResponse-array_github_com_faridlan_employee-tracker-api_internal_delivery_http_dto_TargetDetailResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_faridlan_employee-tracker-api_internal_utils.ErrorResponse'
+      summary: List Semua Target
+      tags:
+      - Target
     post:
       consumes:
       - application/json
